--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -11,12 +11,14 @@
 
 <title>Spring eCommerce</title>
 
+
 <!-- Bootstrap core CSS -->
 <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"
 	rel="stylesheet">
 
 <!-- Custom styles for this template -->
 <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+
 
 </head>
 
@@ -31,54 +33,58 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Producto</small>
+			Spring eCommerce <small>Carrito</small>
 		</h1>
 
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item active">Producto</li>
+			<li class="breadcrumb-item active">Carrito</li>
 		</ol>
 
 		<!-- Blog Post -->
 		<div class="card mb-4">
 			<div class="card-body">
 				<div class="row">
-					<div class="col-lg-6">
-						<a href="#"> <img class="img-fluid rounded"
-							th:src="@{/images/{img}(img=${producto.imagen}) }" alt="">
-						</a>
+					<div class="col-lg-9">
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">Producto</th>
+									<th scope="col">Precio</th>
+									<th scope="col">Cantidad</th>
+									<th scope="col">Total</th>
+									<th scope="col">Acción</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="dorden:${cart}">
+									<td th:text="${dorden.nombre}"></td>
+									<td th:text="${dorden.precio}"></td>
+									<td th:text="${dorden.cantidad}"></td>
+									<td th:text="${dorden.total}"></td>
+									<td><a href="#" class="btn btn-danger">Quitar</a></td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
-					<div class="col-lg-6">
-						<form th:action="@{/cart}" method="POST">
-						<input type="hidden" th:value="${producto.id}" name="id">
-							<h2 class="card-title" th:text="${producto.nombre}"></h2>
 
-							<ul class="list-group">
-								<li class="list-group-item"><h5  th:text="'Precio: ' +${producto.precio}"></h5></li>
-								<li class="list-group-item">
-									<p th:text="'Descripción: '+${producto.descripcion}" ></p>
-								</li>
-								<li class="list-group-item"><h6>
-										Cantidad: <input type="number" id="cantidad" name="cantidad"
-											autocomplete="off" min="1" max="5" value="1">
-									</h6></li>
-							</ul>
+					<div class="col-lg-3">
+						<h2 class="card-title">SUBTOTAL</h2>
 
-
-							<button type="submit" class="btn btn-dark">Añadir al
-								carrito</button>
-
-						</form>
+						<ul class="list-group">
+							<li class="list-group-item"><h5 th:text="${orden.total}">Total: </h5></li>
+							<a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
+						</ul>
 					</div>
+
 				</div>
 			</div>
 		</div>
-
-
 	</div>
 	<!-- /.container -->
 
 	<!-- Footer -->
+
 	<div th:include="usuario/template_usuario.html::footer"></div>
 
 	<!-- Bootstrap core JavaScript -->
